Added functionality to read from MySQL

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -65,11 +65,11 @@
     <div id="title">Description of what I used it for</div>
     <div id="Test">Info Here $57.35</div>
     <div id="line1"></div>
-    <div id="title">Description of what I used it for</div>
-    <div id="Test">Info Here $57.35</div>
+    <div id="title">Second description of what I used it for</div>
+    <div id="Test">More info Here $32.35</div>
     <div id="line1"></div>
-    <div id="title">Description of what I used it for</div>
-    <div id="Test">Info Here $57.35</div>
+    <div id="title">Third description of what I used it for</div>
+    <div id="Test">Even more info Here $21.35</div>
     <div id="line1"></div>
 </body>
 
